app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;


/* body {
  font-family: Arial, Helvetica, sans-serif;
} */

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }

  p,a,li,ul,span,div {
    @apply text-sm
  }

  /* p, li {
    @apply text-paragraph/60
  } */

  /* a {
    @apply text-paragraph/80
  } */

  /* h1,h2,h3,h4,h5,h6 {
    @apply text-heading/60
  } */
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;
    --primary: 240 5.9% 10%;
    --primary-foreground: 0 0% 98%;
    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;
    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;
    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 240 10% 3.9%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 0.5rem;
  }
  .dark {
    --background: 240 10% 3.9%;
    --foreground: 0 0% 98%;
    --card: 240 10% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;
    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;
    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 240 4.9% 83.9%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
  }
}

@layer base {
  * {
    @apply border-border;
  }

}

.underLine {
  background-size: 100% 1px;
  background-position: 0 1.25rem;
  background-repeat: no-repeat;
  background-image: linear-gradient(
    rgba(108, 122, 137, 10) 90%,
    rgba(108, 122, 137, 10)
  );
}

/* .underLine:hover {
  background-image: linear-gradient(
    rgba(209, 213, 219, 30),
    rgba(209, 213, 219, 30)
  );
  background-size: 100% 1px;
} */

/* .bg-grainy {
  z-index: -1;
  position: fixed;
  min-height: 100vh;
  min-width: 100vw;
  filter: contrast(180%) brightness(100%);
  background-position: center;
  background: linear-gradient(
      150deg,
      rgba(30, 2, 60, 0.5),
      rgba(36, 54, 40, 1),
      rgba(30, 2, 60, 0.6)
    ),
    url("data:image/svg+xml,%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='40' numOctaves='1' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
} */

